--- a/resumen.Rmd
+++ b/resumen.Rmd
@@ -1,12 +1,18 @@
 ---
-title: "Resumen"
+title: |
+  ![](logoUCO.png){width=10%}
+  Breast Cancer Gene Expression Profiles
+  ![](logofac.png){width=15%}
+  (METABRIC)
+  
 author: "Andrea Murillo Espinar, Andrea Torres Philpott"
-date: "R Sys.date()"
+date: "`r Sys.Date()`"
 output: 
   html_document:
     toc: true
     number_sections: true
-  
+bibliography: ["breast_cancer.bib", "libraries.bib"]
+link-citations: true
 ---
 
 ```{r setup, include=FALSE}
@@ -26,10 +32,10 @@ library(splines)
 library(stats)
 ```
 
-# Introducción
+# **Introducción**
 
 ## Separación de datos
-Primero hemos identificado los datos clínicos de los genéticos
+Primero hemos identificado los *datos clínicos* de los *datos genéticos*
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 data <- read.csv("C:/Users/usuario/Downloads/archive/METABRIC_RNA_Mutation.csv")
@@ -48,6 +54,12 @@ datos_clinicos[datos_clinicos == ""] <- NA
 dim(datos_clinicos)
 str(datos_clinicos)
 ```
+
+Los datos tienen `r nrow(datos_clinicos)` filas y `r ncol(datos_clinicos)` columnas.
+Cada fila se corresponde con un paciente, por tanto, hay `r nrow(datos_clinicos)` pacientes.
+
+# Artículos donde sale el dataset (METABRIC)
+Usado por @mucakiPredictingOutcomesHormone2017 y @mukherjeeAssociationsGenomicStratification2018
 
 # Gráfico de tumor_stage
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
@@ -222,3 +234,38 @@ summary(cox_tnbc_model)
 
 
 Interpretación: es significativo, "El cáncer de mama Triple Negativo (TNBC) se asocia con un riesgo de muerte 21.24% mayor en cualquier momento dado en comparación con otros subtipos de cáncer de mama (No-TNBC)
+
+```{r}
+# vamos a hacerlo otra vez omitiendo NC
+  # Limpieza y preparación de datos (Ajustado)
+datos_combinados <- data %>% 
+select(`pam50_._claudin.low_subtype`, mutation_count) %>% 
+    
+    # AÑADIR FILTRO PARA ELIMINAR "NC" (Not Classified)
+filter(!is.na(`pam50_._claudin.low_subtype`) & 
+             !is.na(mutation_count) & 
+             `pam50_._claudin.low_subtype` != "NC") 
+  
+  # Nota: Después de filtrar, R puede conservar los niveles 'NC' en la metadata.
+  # Para asegurarnos de que desaparezca del gráfico, convertimos la columna a factor, 
+  # forzando a R a recalcular los niveles (se hace automáticamente si la columna ya era factor).
+  datos_combinados <- datos_combinados %>%
+    mutate(`pam50_._claudin.low_subtype` = factor(`pam50_._claudin.low_subtype`))
+  
+  
+  # Gráfico (Box-Violin Plot)
+  datos_combinados %>% 
+    ggplot(aes(x = `pam50_._claudin.low_subtype`, y = mutation_count, fill = `pam50_._claudin.low_subtype`)) +
+    geom_violin(alpha = 0.6, show.legend = FALSE) + 
+    geom_boxplot(width = 0.1, color = "black", alpha = 0.7, show.legend = FALSE) + 
+    labs(
+      title = "Carga Mutacional por Subtipo Molecular PAM50",
+      x = "Subtipo Molecular",
+      y = "Conteo de Mutaciones",
+      fill = "Subtipo" 
+    ) +
+    theme_bw() +
+    scale_fill_viridis_d()
+
+```
+
