--- a/breast_cancer.bib
+++ b/breast_cancer.bib
@@ -1,3 +1,11 @@
+@article{cisternasCancerMamaTriple,
+  title = {Cáncer de mama Triple Negativo},
+  author = {Cisternas, T},
+  abstract = {Over the years, Triple Negative breast cancers have been studied, mainly because of its poor prognosis but also because it lacks a target therapy. Its debut may occur in different ways, therefore specialists can choose between different measures for treatment. The choices lay between adjuvant or neoadjuvant therapies or to directly face metastatic disease.},
+  langid = {spanish},
+  file = {C:\Users\usuario\Zotero\storage\5RFL27D3\Cisternas - Cáncer de mama Triple Negativo.pdf}
+}
+
 @article{mucakiPredictingOutcomesHormone2017,
   title = {Predicting {{Outcomes}} of {{Hormone}} and {{Chemotherapy}} in the {{Molecular~Taxonomy}} of~{{Breast Cancer~International~Consortium}} ({{METABRIC}}) {{Study}} by {{Biochemically-inspired Machine Learning}}},
   author = {Mucaki, Eliseos J. and Baranova, Katherina and Pham, Huy Q. and Rezaeian, Iman and Angelov, Dimo and Ngom, Alioune and Rueda, Luis and Rogan, Peter K.},
@@ -34,4 +42,38 @@
   langid = {english},
   keywords = {Breast cancer},
   file = {C:\Users\usuario\Zotero\storage\HJFWVFIR\Mukherjee et al. - 2018 - Associations between genomic stratification of breast cancer and centrally reviewed tumour pathology.pdf}
+}
+
+@article{perouMolecularPortraitsHuman2000,
+  title = {Molecular Portraits of Human Breast Tumours},
+  author = {Perou, C. M. and Sørlie, T. and Eisen, M. B. and family=Rijn, given=M., prefix=van de, useprefix=true and Jeffrey, S. S. and Rees, C. A. and Pollack, J. R. and Ross, D. T. and Johnsen, H. and Akslen, L. A. and Fluge, O. and Pergamenschikov, A. and Williams, C. and Zhu, S. X. and Lønning, P. E. and Børresen-Dale, A. L. and Brown, P. O. and Botstein, D.},
+  date = {2000-08-17},
+  journaltitle = {Nature},
+  shortjournal = {Nature},
+  volume = {406},
+  number = {6797},
+  eprint = {10963602},
+  eprinttype = {pubmed},
+  pages = {747--752},
+  issn = {0028-0836},
+  doi = {10.1038/35021093},
+  abstract = {Human breast tumours are diverse in their natural history and in their responsiveness to treatments. Variation in transcriptional programs accounts for much of the biological diversity of human cells and tumours. In each cell, signal transduction and regulatory systems transduce information from the cell's identity to its environmental status, thereby controlling the level of expression of every gene in the genome. Here we have characterized variation in gene expression patterns in a set of 65 surgical specimens of human breast tumours from 42 different individuals, using complementary DNA microarrays representing 8,102 human genes. These patterns provided a distinctive molecular portrait of each tumour. Twenty of the tumours were sampled twice, before and after a 16-week course of doxorubicin chemotherapy, and two tumours were paired with a lymph node metastasis from the same patient. Gene expression patterns in two tumour samples from the same individual were almost always more similar to each other than either was to any other sample. Sets of co-expressed genes were identified for which variation in messenger RNA levels could be related to specific features of physiological variation. The tumours could be classified into subtypes distinguished by pervasive differences in their gene expression patterns.},
+  langid = {english},
+  keywords = {Breast Neoplasms,DNA Neoplasm,Female,Gene Expression,Gene Expression Profiling,Genes erbB-2,Humans,Oligonucleotide Array Sequence Analysis,Phenotype,Tumor Cells Cultured}
+}
+
+@article{sorlieRepeatedObservationBreast2003,
+  title = {Repeated Observation of Breast Tumor Subtypes in Independent Gene Expression Data Sets},
+  author = {Sørlie, Therese and Tibshirani, Robert and Parker, Joel and Hastie, Trevor and Marron, J. S. and Nobel, Andrew and Deng, Shibing and Johnsen, Hilde and Pesich, Robert and Geisler, Stephanie and Demeter, Janos and Perou, Charles M. and Lønning, Per E. and Brown, Patrick O. and Børresen-Dale, Anne-Lise and Botstein, David},
+  date = {2003-07-08},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  volume = {100},
+  number = {14},
+  pages = {8418--8423},
+  publisher = {Proceedings of the National Academy of Sciences},
+  doi = {10.1073/pnas.0932692100},
+  url = {https://www.pnas.org/doi/10.1073/pnas.0932692100},
+  urldate = {2025-12-15},
+  abstract = {Characteristic patterns of gene expression measured by DNA microarrays have been used to classify tumors into clinically relevant subgroups. In this study, we have refined the previously defined subtypes of breast tumors that could be distinguished by their distinct patterns of gene expression. A total of 115 malignant breast tumors were analyzed by hierarchical clustering based on patterns of expression of 534 “intrinsic” genes and shown to subdivide into one basal-like, one ERBB2-overexpressing, two luminal-like, and one normal breast tissue-like subgroup. The genes used for classification were selected based on their similar expression levels between pairs of consecutive samples taken from the same tumor separated by 15 weeks of neoadjuvant treatment. Similar cluster analyses of two published, independent data sets representing different patient cohorts from different laboratories, uncovered some of the same breast cancer subtypes. In the one data set that included information on time to development of distant metastasis, subtypes were associated with significant differences in this clinical feature. By including a group of tumors from BRCA1 carriers in the analysis, we found that this genotype predisposes to the basal tumor subtype. Our results strongly support the idea that many of these breast tumor subtypes represent biologically distinct disease entities.},
+  file = {C:\Users\usuario\Zotero\storage\N7WHLLAL\Sørlie et al. - 2003 - Repeated observation of breast tumor subtypes in independent gene expression data sets.pdf}
 }
