--- a/resumen.Rmd
+++ b/resumen.Rmd
@@ -7,7 +7,9 @@ title: |
   
 author: "Andrea Murillo Espinar, Andrea Torres Philpott"
 date: "`r Sys.Date()`"
-output: 
+output:
+  github_document:
+    html_preview: false
   html_document:
     highlight: tango # colores 
     css: estilos_personalizados.css
