--- a/libraries.bib
+++ b/libraries.bib
@@ -1,3 +1,47 @@
+@Manual{survival-package,
+  title = {A Package for Survival Analysis in R},
+  author = {Terry M Therneau},
+  year = {2024},
+  note = {R package version 3.8-3},
+  url = {https://CRAN.R-project.org/package=survival},
+}
+
+@Book{survival-book,
+  title = {Modeling Survival Data: Extending the {C}ox Model},
+  author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+  year = {2000},
+  publisher = {Springer},
+  address = {New York},
+  isbn = {0-387-98784-3},
+}
+
+@Manual{survminer,
+  title = {survminer: Drawing Survival Curves using 'ggplot2'},
+  author = {Alboukadel Kassambara and Marcin Kosinski and Przemyslaw Biecek},
+  year = {2025},
+  note = {R package version 0.5.1},
+  url = {https://CRAN.R-project.org/package=survminer},
+  doi = {10.32614/CRAN.package.survminer},
+}
+
+@Manual{fsa,
+  title = {FSA: Simple Fisheries Stock Assessment Methods},
+  author = {Derek H. Ogle and Jason C. Doll and A. Powell Wheeler and Alexis Dinno},
+  year = {2025},
+  note = {R package version 0.10.0},
+  url = {https://CRAN.R-project.org/package=FSA},
+  doi = {10.32614/CRAN.package.FSA},
+}
+
+@Manual{stats,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2025},
+  url = {https://www.R-project.org/},
+}
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
