Booktown para que se vea el fig.cap

--- a/breast_cancer.bib
+++ b/breast_cancer.bib
@@ -1,3 +1,36 @@
+}@online{amevorIntegrativePrognosticModeling2025,
+  title = {Integrative {{Prognostic Modeling}} of {{Breast Cancer Survival}} with {{Gene Expression}} and {{Clinical Data}}},
+  author = {Amevor, Robert and Kubuafor, Emmanuel and Baidoo, Dennis and Salifu, Junaidu and Gonnage, Koshali Muthunama and Okeke, Onyedikachi Joshua},
+  date = {2025-08-22},
+  eprint = {2508.16740},
+  eprinttype = {arXiv},
+  eprintclass = {q-bio},
+  doi = {10.48550/arXiv.2508.16740},
+  url = {http://arxiv.org/abs/2508.16740},
+  urldate = {2025-12-16},
+  abstract = {Background: Accurate survival prediction in breast cancer is essential for patient stratification and personalized therapy. Integrating gene expression data with clinical factors may enhance prognostic performance and support precision medicine. Objective: To develop an integrative survival prediction model combining clinical variables and gene expression signatures, and to assess their contributions using penalized Cox regression and machine learning. Methods: We analyzed 1,867 patients from the METABRIC cohort with clinical annotations and microarray-based gene expression profiles. The top 5,000 most variable genes were retained. Elastic Net-penalized Cox regression identified 75 predictors (70 genes and 5 clinical variables: tumor size, stage, surgery type, age at diagnosis, and Nottingham Prognostic Index). Model performance was evaluated with Harrell's concordance index (C-index) and 36-month time-dependent AUC. Random Survival Forests (RSF) trained on the top 20 genes assessed nonlinear effects and validated variable importance. PCA and heatmaps visualized gene expression patterns across risk groups. Results: The integrative Cox model achieved a C-index of 0.922 and a 36-month AUC of 0.94, outperforming clinical-only models (C=0.64). RSF confirmed the prognostic value of top genes (e.g., OR2T27, TBATA, LINC01165, SLC10A4), yielding a 36-month AUC of 0.88. Conclusions: Combining gene expression signatures with clinical variables substantially improves survival prediction in breast cancer and provides a framework for individualized prognostic assessment and clinical decision-making.},
+  pubstate = {prepublished},
+  keywords = {Quantitative Biology - Quantitative Methods},
+  file = {C:\Users\usuario\Zotero\storage\AZVYEJJY\Amevor et al. - 2025 - Integrative Prognostic Modeling of Breast Cancer Survival with Gene Expression and Clinical Data.pdf}
+}
+
+@article{hsiehMultigeneExpressionAssays2025,
+  title = {Multi-Gene Expression Assays in Breast Cancer: A Literature Review},
+  shorttitle = {Multi-Gene Expression Assays in Breast Cancer},
+  author = {Hsieh, Tsung-Yen and Huang, Chi-Cheng and Tseng, Ling-Ming},
+  date = {2025-09-30},
+  journaltitle = {Translational Cancer Research},
+  volume = {14},
+  number = {9},
+  publisher = {AME Publishing Company},
+  issn = {2219-6803, 2218-676X},
+  doi = {10.21037/tcr-2025-803},
+  url = {https://tcr.amegroups.org/article/view/106002},
+  urldate = {2025-12-16},
+  abstract = {Multi-gene expression assays in breast cancer: a literature review},
+  langid = {english}
+}
+
 @online{amevorIntegrativePrognosticModeling2025,
   title = {Integrative {{Prognostic Modeling}} of {{Breast Cancer Survival}} with {{Gene Expression}} and {{Clinical Data}}},
   author = {Amevor, Robert and Kubuafor, Emmanuel and Baidoo, Dennis and Salifu, Junaidu and Gonnage, Koshali Muthunama and Okeke, Onyedikachi Joshua},
